Fix escaped characters for property search